--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </a>
 
       <!-- Settings -->
-      <a class="d-block" href="https://t.me/thomas927423" target="_blank">
+      <a class="d-block" href="https://t.me/timo927423" target="_blank">
         <button class="btn btn-fab btn-sm" id="sideel" title="Telegram"><img src="./assets/icon/icons8-telegram-48.png"
             width="28"></img></button>
       </a>
